syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

service CalculatorService {
  rpc EvaluateExpression(ExpressionRequest) returns (ExpressionResponse) {};
}

message ExpressionRequest {
  string expression = 1;
}

message ExpressionResponse {
  int32 result = 1;
}
